# korea-policy-news-crawler

./: .dev.env.example  .example.env  .gitignore  .local.env  README.md  docker-compose.yaml  project.code-workspace
airflow/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/dags/: korea_policy_news_crawling_pipeline.py
airflow/plugins/: main.py
airflow/plugins/clients/: minio_client.py  postgres_client.py
airflow/plugins/models/: news.py
airflow/plugins/pipelines/raw/: dl_loader.py  list_scraper.py  minio_loader.py  raw_scraper.py  urls_scraper.py
airflow/plugins/pipelines/transformed/: dl_extractor.py  dw_loader.py  minio_extractor.py  postgres_loader.py  raw_transformer.py
airflow/src/crawler/: scrap_news.py
crawler/: pyproject.toml
crawler/src/: main.py
crawler/src/clients/: postgres_client.py
crawler/src/crawler/: news_list.py
crawler/src/pipelines/raw/: raw_scraper.py
crawler/src/pipelines/transformed/: dl_extractor.py  dw_loader.py  raw_transformer.py
crawler/src/utils/: headers_generator.py
elk/: docker-compose.yaml
elk/config/: logstash.conf
elk/jdbc-driver/: README.md
minio/: docker-compose.yaml
postgresql/: docker-compose.yaml
web-app/: Dockerfile  biome.json  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
web-app/src/: index.ts
web-app/src/views/: index.ejs
