[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apache-airflow>=3.0.3",
  "apache-airflow-providers-amazon>=9.10.0",
  "asyncio>=3.4.3",
  "asyncpg>=0.30.0",
  "bs4>=0.0.2",
  "httpx>=0.28.1",
  "lxml>=6.0.0",
  "minio>=7.2.15",
  "pydantic>=2.11.7",
  "requests>=2.32.4",
]

[dependency-groups]
dev = ["mypy>=1.16.1", "ruff>=0.12.3"]
