[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]
